# stm32g4xx-hal

./: .gitignore  Cargo.toml
examples/: button.rs  comp_w_dac.rs  cordic.rs  dac.rs  flash_with_rtic.rs  i2c-bme680.rs
src/: adc.rs  can.rs  comparator.rs  cordic.rs  dac.rs  delay.rs  exti.rs  flash.rs  gpio.rs  i2c.rs  independent_watchdog.rs  lib.rs  opamp.rs  prelude.rs  pwm.rs  pwr.rs  spi.rs  syscfg.rs  timer.rs
src/dma/: stream.rs
src/rcc/: clockout.rs  config.rs  mod.rs
src/serial/: usart.rs
target-tests/: Cargo.toml
target-tests/.cargo/: config.toml
target-tests/tests/: cordic.rs
