[package]
name = "cordic-test"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.3"
critical-section = "1.1.2"
defmt = { version = "0.3.6" }
defmt-rtt = { version = "0.4.0" }
defmt-test = "0.3.2"
fixed = "1.28.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
panic-reset = "0.1.1"
rtic = { git = "https://github.com/rtic-rs/rtic", branch = "master", features = [
    "thumbv7-backend",
] }
rtic-common = { git = "https://github.com/rtic-rs/rtic", rev = "8c23e178f3838bcdd13662a2ffefd39ec144e869" }
rtic-monotonics = { git = "https://github.com/rtic-rs/rtic", rev = "8c23e178f3838bcdd13662a2ffefd39ec144e869", features = [
    "stm32-metapac",
    "stm32g431rb",
    "stm32_tim2",
] }
stm32g4xx-hal = { path = "../", features = ["stm32g431"] }
cordic = "0.1.5"

[profile.dev]
debug = true
lto = true
opt-level = "z"
incremental = true

[profile.release]
debug = false
lto = true
opt-level = "z"
incremental = true

[[test]]
name = "cordic"
harness = false
